# movie-rama

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
client/: package-lock.json  package.json.bcrypt
client/src/: App.svelte  Header.svelte  LogInForm.svelte  SignUpForm.svelte  main.js
client/src/components/: AddMovieForm.svelte  Header.svelte  LogInForm.svelte  Modal.svelte  MovieCard.svelte  SignUpForm.svelte
client/src/shared/: Modal.svelte
client/src/stores/: MovieStore.js  UserStore.js
migrations/2023-06-03-081646_users/: up.sql
migrations/2023-06-04-091253_movies/: up.sql
migrations/2023-06-04-135525_votes/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/api/: mod.rs  movies.rs  users.rs  votes.rs
src/db/: mod.rs  movies.rs  users.rs  votes.rs
src/middleware/: mod.rs
src/models/: mod.rs  movies.rs  users.rs  votes.rs
src/models/votes/: vote_type.rs
tests/: mod.rs
