[package]
authors = ["Nikos T"]
edition = "2021"
name = "movie-rama"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
diesel = { version = "2.1.0", features = ["r2d2", "postgres"] }

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"
futures-util = "0.3.25"
dotenvy = "0.15.7"
diesel = { version = "2.1.0", features = ["r2d2", "postgres"] }
serde = { version = "1.0.163", features = ["derive"] }
anyhow = "1.0.71"
actix-cors = "0.6.4"
actix-web-httpauth = "0.8.0"
argonautica = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
